--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         </div>
         <div class="main-top-bot">
-        <div class="bg-top-bot">
+        <div id="bg-top-bot">
             <!-- <div class="content-tab">
                <button>Huế</button>
                <button>Hồ Chí Minh</button>
