--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         </div>
         <div class="main-top-bot">
-        <div id="bg-top-bot">
+        <div id="js-bg-top-bot">
            
             <div class="w-main-top">
                 <div class="w-main-top-left">
